--- a/style.css
+++ b/style.css
@@ -2,9 +2,8 @@
 
 body
 {
-#border-top:10px solid #0099cc;
 background: white;
-font-family:'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
 color:#333333;
 }
 
@@ -24,7 +23,9 @@ header h1
 margin: 30px 0 0 0;
 font-size: 55px;
 color: white;
-font-family: 'Open Sans';
+font-family:'Futura';
+text-align: center;
+letter-spacing: 1px;
 }
 
 header p
@@ -37,13 +38,14 @@ margin-left:132px;
 
 header nav ul
 {
+border-top:10px solid #0099cc;
 list-style:none;
 }
 
 header nav ul li
 {
 display:block;
-float:left;
+float:right;
 padding:3px 15px;
 }
 
@@ -60,37 +62,16 @@ header nav ul li a:hover
 color: #0099cc;
 }
 
-
-.columns
-{
-width:auto;
-max-width:800px;
-margin:0 auto;
-padding:70px 0 45px 0;
-}
-
-.columns h2{
-color: #696969;
-}
-
-.columns nav ul li{
-line-height: 2.8;
-}
-
-.columns nav ui li a{
-font-family: 'Open Sans', sans-serif;
-color: #4A463B;
-text-color: #696969;
-text-decoration: none;
-font-size: 16px;
-}
-
 #boxcontent
 {
 width:auto;
-max-width:900px;
+max-width:875px;
 margin:0 auto;
 padding:50px 15px 45px 15px;
-background-color: #F0F8FF;
+#background-color: #F0F8FF;
 }
 
+#boxcontent h2
+{
+
+}
