--- a/style.css
+++ b/style.css
@@ -67,11 +67,13 @@ color: #0099cc;
 width:auto;
 max-width:875px;
 margin:0 auto;
-padding:50px 15px 45px 15px;
+padding:5px 15px 45px 15px;
 #background-color: #F0F8FF;
 }
 
 #boxcontent h2
 {
-
+color: #0099cc;
+border-bottom: 1px solid #dedede;
+margin-bottom: 50px;
 }
