--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ margin-left:132px;
 
 header nav ul
 {
-border-top:10px solid #0099cc;
+border-top:5px solid #0099cc;
+border-bottom: 5px solid #0099cc;
 list-style:none;
 }
 
@@ -52,14 +53,14 @@ padding:3px 15px;
 header nav ul li a
 {
 font-family: 'Open Sans', sans-serif;
-color: #4A463B;
+color: #4d4d4d;
 text-transform: uppercase;
 transition: all .25s ease;
 }
 
 header nav ul li a:hover
 {
-color: #0099cc;
+color: #333333;
 }
 
 #boxcontent
@@ -67,13 +68,26 @@ color: #0099cc;
 width:auto;
 max-width:875px;
 margin:0 auto;
-padding:5px 15px 45px 15px;
+padding: 10px 15px 40px 15px;
 #background-color: #F0F8FF;
 }
 
 #boxcontent h2
 {
 color: #0099cc;
+#border-bottom: 1px solid #dedede;
+#margin-bottom: 50px;
+}
+
+#boxcontent h2 p
+{
+color: #999999;
+font-size:12px;
 border-bottom: 1px solid #dedede;
-margin-bottom: 50px;
+margin-bottom: 40px;
+}
+
+#boxcontent p 
+{
+text-align: justify;
 }
